			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

IMP: (1/10/06, SMR) Reorganized "CircuitChanges.java" into client and server parts.
     Created "CircuitChangeJobs.java" with server parts.
     Created com.sun.tool.JobException (no contents) and subclass CantEditException.

IMP: (1/10/06, DN) Cell bounds are stored in immutable class ERectangle and are shared with Snapshot.

IMP: (1/9/06, GVG) Reorganizing and cleaning TechPalette.
     New bits for special transistors (H/L VT, native, etc).

IMP: (1/9/06, SMR) Sweeps in the waveform window now show inclusion and exclusion
     more distinctly (Bug #782).

IMP: (1/9/06, SMR) Waveform windows can now be exported as PostScript (Bug #564).

BUG: (1/9/06, SMR) Annular ring construction crashes.
FIX: In AnnularRing.MakeAnnulus.doIt() do not try to change EPoint coordinates.

IMP: (1/8/06, SMR) Initial implementation of PostScript output for Waveform Window (Bug #564).

BUG: (1/5/06, SMR) Multi-object "Properties" dialog doesn't show distance when two are selected (Bug #781).
FIX: In GetInfoMulti.loadMultiInfo(), include distance information in the list of text.

IMP: (1/5/06, SMR) Removed unused method AbstractTextDescriptor.isAbsoluteSize().

BUG: (1/5/06, SMR) PolyMerge.contains(Layer, Rectangle2D) does not work.
FIX: Must use same method as in PolyMerge.contains(Layer, PolyBase),
     subtracting areas and seeing if the result has near-zero size.

IMP/MAN: (1/5/06, SMR) Added option to merge geometry while reading GDS in.

IMP/MAN: (1/3/06, SMR) The "Edit / Erase" command is now a submenu and has
     two new entries: "Arcs Connected to Selected Nodes" and
     "Arcs Connected Between Selected Nodes" (Bug #610).

IMP/MAN: (1/3/06, SMR) Moved "Edit / Info / Show Undo List" to "Edit / Show Undo List".
