@@ -25,5 +25,20 @@ package com.sun.electric.tool;
 
 public class JobException extends Exception
 {
+    public JobException() {
+        super();
+    }
+    
+    /**
+     * Constructs a new exception with the specified detail message.  The
+     * cause is not initialized, and may subsequently be initialized by
+     * a call to {@link #initCause}.
+     *
+     * @param   message   the detail message. The detail message is saved for 
+     *          later retrieval by the {@link #getMessage()} method.
+     */
+    public JobException(String message) {
+        super(message);
+    }
 
 }
