@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.04d: *********************************
 
+IMP: (1/11/06, DN) Added method Job.terminateIt. This method will be called on client side
+     after termination of Job.doIt on server side.
+
 IMP: (1/10/06, SMR) Reorganized "CircuitChanges.java" into client and server parts.
      Created "CircuitChangeJobs.java" with server parts.
      Created com.sun.tool.JobException (no contents) and subclass CantEditException.
